manifests/platform/clickhouse/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clickhouse
  labels:
    kubernetes.io/metadata.name: clickhouse
